// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task rendering render with minimal Props 1`] = `
<Fragment>
  <UnlockConfirmationModal
    id="unlockModal"
    isOpen={false}
    onClick={[Function]}
    setModalClosed={[Function]}
  />
  <ForceUnlockConfirmationModal
    id="forceUnlockModal"
    isOpen={false}
    onClick={[Function]}
    selectedRowsLen={1}
    setModalClosed={[Function]}
  />
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <TaskButtons
        action=""
        canEdit={false}
        cancelTaskRequest={[Function]}
        cancellable={false}
        dynflowEnableConsole={false}
        externalId=""
        forceCancelTaskRequest={[Function]}
        hasSubTasks={false}
        id="test"
        parentTask=""
        resumable={false}
        resumeTaskRequest={[Function]}
        setForceUnlockModalOpen={[Function]}
        setUnlockModalOpen={[Function]}
        state=""
        taskProgressToggle={[MockFunction]}
        taskReload={false}
        taskReloadStart={[MockFunction]}
        unlockTaskRequest={[Function]}
      />
    </Row>
    <TaskInfo
      action=""
      endedAt=""
      errors={Array []}
      forceCancelTaskRequest={[Function]}
      help=""
      id="test"
      output=""
      progress={0}
      result="error"
      startAt=""
      startBefore=""
      startedAt=""
      state=""
      taskProgressToggle={[MockFunction]}
      taskReload={false}
      taskReloadStart={[MockFunction]}
      unlockTaskRequest={[Function]}
      username=""
      usernamePath=""
    />
  </Grid>
</Fragment>
`;

exports[`Task rendering render with some Props 1`] = `
<Fragment>
  <UnlockConfirmationModal
    id="unlockModal"
    isOpen={false}
    onClick={[Function]}
    setModalClosed={[Function]}
  />
  <ForceUnlockConfirmationModal
    id="forceUnlockModal"
    isOpen={false}
    onClick={[Function]}
    selectedRowsLen={1}
    setModalClosed={[Function]}
  />
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <TaskButtons
        action=""
        canEdit={true}
        cancelTaskRequest={[Function]}
        cancellable={false}
        dynflowEnableConsole={true}
        externalId=""
        forceCancelTaskRequest={[Function]}
        hasSubTasks={true}
        id="test"
        parentTask="parent-id"
        resumable={false}
        resumeTaskRequest={[Function]}
        setForceUnlockModalOpen={[Function]}
        setUnlockModalOpen={[Function]}
        state="paused"
        status="RESOLVED"
        taskProgressToggle={[MockFunction]}
        taskReload={true}
        taskReloadStart={[MockFunction]}
        unlockTaskRequest={[Function]}
      />
    </Row>
    <TaskInfo
      action=""
      canEdit={true}
      dynflowEnableConsole={true}
      endedAt=""
      errors={Array []}
      forceCancelTaskRequest={[Function]}
      hasSubTasks={true}
      help=""
      id="test"
      output=""
      parentTask="parent-id"
      progress={0}
      result="error"
      startAt=""
      startBefore=""
      startedAt=""
      state="paused"
      status="RESOLVED"
      taskProgressToggle={[MockFunction]}
      taskReload={true}
      taskReloadStart={[MockFunction]}
      unlockTaskRequest={[Function]}
      username=""
      usernamePath=""
    />
  </Grid>
</Fragment>
`;
